samples/_failures_safe/1761505822_a16493_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da8a38ec.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_da8a38ec.c:181:13: error: expected expression at end of input
  181 |             printf("Vertex %d: %d\n", i,
      |             ^~~~~~
./samples/SAFE/__tmp_da8a38ec.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da8a38ec.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da8a38ec.c:181:13: error: expected declaration or statement at end of input
